--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Create Blog</title>
 
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
@@ -52,7 +51,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn btn-primary">Submit for Approval</button>
+      <button type="submit" class="btn btn-primary">Submit </button>
     </form>
   </div>
 
