--- a/views/login.ejs
+++ b/views/login.ejs
@@ -56,6 +56,13 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
               </div>
+
+            <% if (error) { %>
+              <div class="alert alert-danger" role="alert">
+                <%= error %>
+              </div>
+            <% } %>
+
               <button type="submit" class="btn btn-primary w-100">Login</button>
             </form>
 
