--- a/views/blogs/admin.ejs
+++ b/views/blogs/admin.ejs
@@ -50,7 +50,9 @@
 <body>
 
   <div class="container py-5">
-    <h2 class="text-primary">Blogs</h2>
+    <h2 class="text-primary"> Blogs</h2>
+
+
 
     <div class="row">
       <% if (blogs && blogs.length > 0) { %>
@@ -62,19 +64,25 @@
               <% } else { %>
                 <img src="https://via.placeholder.com/400x200?text=No+Image" class="card-img-top" alt="No image available">
               <% } %>
-
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title text-dark"><%= blog.title %></h5>
                 <p class="card-text text-muted"><%= blog.description %></p>
+                <div class="mt-auto d-flex justify-content-between">
+  
+ <div class="mt-auto d-flex justify-content-between">
 
-                <% if (user && user.role === 'superadmin') { %>
-                  <div class="mt-auto d-flex justify-content-between">
-                    <a href="/blogs/edit/<%= blog.id %>" class="btn btn-sm btn-outline-primary">Edit</a>
-                    <form action="/blogs/delete/<%= blog.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this blog?');">
-                      <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
-                    </form>
-                  </div>
-                <% } %>
+ 
+   
+    <a href="/blogs/admin/edit/<%= blog.id %>" class="btn btn-sm btn-outline-primary">Edit</a>
+
+    <form action="/blogs/delete/<%= blog.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this blog?');">
+      <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
+    </form>
+
+</div>
+
+
+</div>
 
               </div>
             </div>
@@ -87,35 +95,35 @@
       <% } %>
     </div>
 
-    <% if (totalPages > 0) { %>
-      <nav aria-label="Page navigation">
-        <div class="d-flex justify-content-between align-items-center mt-4">
-          <span class="text-muted">
-            Page <%= currentPage %> of <%= totalPages %>
-          </span>
+<nav aria-label="Page navigation">
+  <div class="d-flex justify-content-between align-items-center mt-4">
 
-          <ul class="pagination mb-0">
-            <!-- Previous -->
-            <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
-              <a class="page-link"
-                href="<%= user && user.role === 'superadmin' ? '/blogs/superadmin/all?page=' + (currentPage - 1) : '/blogs/guest?page=' + (currentPage - 1) %>"
-                title="Go to previous page">
-                &laquo; Previous
-              </a>
-            </li>
+    <% if(totalPages>0){%>
+    <span class="text-muted">
+      Page <%= currentPage %> of <%= totalPages %>
+    </span>
+ 
+   
+    <ul class="pagination mb-0">
+    
+      <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
+        <a class="page-link" href="/blogs/my?page=<%= currentPage - 1 %>" title="Go to previous page">
+          &laquo; Previous
+        </a>
+      </li>
 
-            <!-- Next -->
-            <li class="page-item <%= currentPage === totalPages ? 'disabled' : '' %>">
-              <a class="page-link"
-                href="<%= user && user.role === 'superadmin' ? '/blogs/superadmin/all?page=' + (currentPage + 1) : '/blogs/guest?page=' + (currentPage + 1) %>"
-                title="Go to next page">
-                Next &raquo;
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <% } %>
+      
+      <li class="page-item <%= currentPage === totalPages || totalPages === 0 ? 'disabled' : '' %>">
+        <a class="page-link" href="/blogs/my?page=<%= currentPage + 1 %>" title="Go to next page">
+          Next &raquo;
+        </a>
+      </li>
+    </ul>
+     <%}%>
+  </div>
+</nav>
+
+
   </div>
 
 </body>
