--- a/views/blogs/edit.ejs
+++ b/views/blogs/edit.ejs
@@ -36,8 +36,15 @@
       <div class="col-md-8">
         <div class="card p-4">
           <h2 class="mb-4 text-center">Edit Blog</h2>
+         
+<% if (user.role === 'superadmin') { %>
+  <form action="/blogs/edit/<%= blog.id %>" method="POST" enctype="multipart/form-data">
+<% } else if (user.role === 'admin') { %>
+  <form action="/blogs/admin/edit/<%= blog.id %>" method="POST" enctype="multipart/form-data">
+<% } else if (user.role === 'user') { %>
+  <form action="/blogs/user/edit/<%= blog.id %>" method="POST" enctype="multipart/form-data">
+<% } %>
 
-          <form action="/blogs/edit/<%= blog.id %>" method="POST" enctype="multipart/form-data">
             
             
             <div class="mb-3">
@@ -79,7 +86,9 @@
 
            
 <div class="d-flex flex-column flex-md-row gap-2 mt-3">
+   
   <button type="submit" class="btn btn-success btn-sm w-50"> Update Blog</button>
+
   <% if(user.role === 'superadmin') { %>
     <a href="/blogs/superadmin/all" class="btn btn-danger btn-sm w-50"> Cancel</a>
   <% } else if(user.role === 'admin') { %>
@@ -87,6 +96,7 @@
   <% } else { %>
     <a href="/blogs/user/all" class="btn btn-danger btn-sm w-50"> Cancel</a>
   <% } %>
+
  
 </div>
 
