--- a/views/blogs/user.ejs
+++ b/views/blogs/user.ejs
@@ -101,14 +101,15 @@
     <% if (totalPages > 1) { %>
     <nav aria-label="Page navigation">
       <ul class="pagination mt-4">
-        <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
-          <a class="page-link" href="/blogs/public?page=<%= currentPage - 1 %>">&laquo; Previous</a>
-        </li>
         <li class="page-item disabled">
           <span class="page-link">Page <%= currentPage %> of <%= totalPages %></span>
         </li>
+        <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
+          <a class="page-link" href="/blogs/user/all?page=<%= currentPage - 1 %>">&laquo; Previous</a>
+        </li>
+        
         <li class="page-item <%= currentPage === totalPages ? 'disabled' : '' %>">
-          <a class="page-link" href="/blogs/public?page=<%= currentPage + 1 %>">Next &raquo;</a>
+          <a class="page-link" href="/blogs/user/all?page=<%= currentPage + 1 %>">Next &raquo;</a>
         </li>
       </ul>
     </nav>
