--- a/views/superadmin/addSector.ejs
+++ b/views/superadmin/addSector.ejs
@@ -11,7 +11,7 @@
 
   <div class="container mt-5">
     <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-5"> <!-- Controls the width -->
+      <div class="col-md-6 col-lg-5"> 
         <div class="card shadow-sm rounded-4">
           <div class="card-header bg-primary text-white">
             <h4 class="mb-0">Add New Sector</h4>
