--- a/views/blogs/user.ejs
+++ b/views/blogs/user.ejs
@@ -100,18 +100,29 @@
  
     <% if (totalPages > 1) { %>
     <nav aria-label="Page navigation">
-      <ul class="pagination mt-4">
-        <li class="page-item disabled">
-          <span class="page-link">Page <%= currentPage %> of <%= totalPages %></span>
-        </li>
-        <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
-          <a class="page-link" href="/blogs/user/all?page=<%= currentPage - 1 %>">&laquo; Previous</a>
-        </li>
-        
-        <li class="page-item <%= currentPage === totalPages ? 'disabled' : '' %>">
-          <a class="page-link" href="/blogs/user/all?page=<%= currentPage + 1 %>">Next &raquo;</a>
-        </li>
-      </ul>
+    <ul class="pagination mb-0">
+  
+  <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
+    <% if (currentPage === 1) { %>
+      <span class="page-link">&laquo; Previous</span>
+    <% } else { %>
+      <a class="page-link" href="?page=<%= currentPage - 1 %>">
+        &laquo; Previous
+      </a>
+    <% } %>
+  </li>
+
+  <li class="page-item <%= currentPage === totalPages ? 'disabled' : '' %>">
+    <% if (currentPage === totalPages) { %>
+      <span class="page-link">Next &raquo;</span>
+    <% } else { %>
+      <a class="page-link" href="?page=<%= currentPage + 1 %>">
+        Next &raquo;
+      </a>
+    <% } %>
+  </li>
+</ul>
+
     </nav>
     <% } %>
 
