--- a/views/blogs/approval.ejs
+++ b/views/blogs/approval.ejs
@@ -53,15 +53,21 @@
       </div>
 
       
-      <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-          <% for(let i = 1; i <= totalPages; i++) { %>
-            <li class="page-item <%= i === currentPage ? 'active' : '' %>">
-              <a class="page-link" href="?page=<%= i %>"><%= i %></a>
-            </li>
-          <% } %>
-        </ul>
-      </nav>
+   <nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+
+  
+    <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>">
+      <a class="page-link" href="?page=<%= currentPage - 1 %>" tabindex="-1">Previous</a>
+    </li>
+
+    <li class="page-item <%= currentPage === totalPages ? 'disabled' : '' %>">
+      <a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a>
+    </li>
+
+  </ul>
+</nav>
+
     <% } %>
   </div>
 
